# json2excel

./: .gitignore  Cargo.toml  build.sh  id_smiles.csv  output.json
json/: common.json  fix.json  id.json  single.json
src/: args.rs  config.rs  download.rs  json.rs  main.rs
