[package]
name = "json2excel"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
log4rs = "1.0.0"
chrono = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

structopt = "0.3"
xlsxwriter = "0.3"

csv = "1.1"


reqwest = { version = "0.11", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }

urlencoding = "1.0.0"


[profile.release]
lto = true
